<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/LinearLayoutDefault"
        android:layout_marginTop="@dimen/margin_top_high"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize">

        <TextView
            style="@style/TextViewDisplay"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="@string/login_rentapp_account"
            />

        <androidx.cardview.widget.CardView style="@style/CardViewDefault">

            <LinearLayout
                style="@style/LinearLayoutDefault"
                android:layout_marginBottom="@dimen/margin_bottom_high">

                <TextView
                    style="@style/TextViewForm"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextDefault"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    style="@style/TextViewForm"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextDefault"
                    android:inputType="textPassword" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_forget_password"
                    style="@style/TextViewSecondary"
                    android:layout_marginTop="@dimen/margin_top_high"
                    android:text="@string/forgot_password" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_sign_in"
            style="@style/ButtonDefault"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in" />

        <include layout="@layout/login_footer" />


    </LinearLayout>


</ScrollView>


