<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/grey_100"
             android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            style="@style/CardViewAlternative">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_high"
                android:layout_marginEnd="@dimen/margin_high"
                android:layout_marginBottom="@dimen/margin_top_high"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewDisplay"
                    android:layout_marginStart="0dp"
                    android:text="@string/rentapp_plus_account_benefits"
                    android:textSize="@dimen/text_size_standard" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/sad_but_true_dad_joke"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        style="@style/TextViewSecondary"
        android:layout_marginStart="@dimen/margin_standard"
        android:textStyle="normal"
        android:text="@string/contact_us"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_standard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_standard"
            android:drawablePadding="@dimen/margin_standard"
            android:fontFamily="@font/raleway_light"
            android:gravity="center_vertical"
            android:text="@string/rentapp_support_email"
            app:drawableLeftCompat="@drawable/ic_email_attach" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/margin_standard"
            android:fontFamily="@font/raleway_light"
            android:text="@string/rentapp_support_cell_number"

            app:drawableLeftCompat="@drawable/ic_phone_charging" />



    </LinearLayout>


</LinearLayout>